--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,8 @@
 	<div class="container">
 		<div class="content">
 			<div class="row">
-				<div class="col-md-6 just-padding">
+				<div class="col-md-6 pt-5">
 					<div id="tree">
-
-					</div>
-				</div>
-				<div class="col-md-6 just-padding">
-					<div id="tree1">
 
 					</div>
 				</div>
@@ -46,39 +41,40 @@
 				'"icon": "fa fa-folder",' +
 				'"nodes": [' +
 				'{' +
-				'"icon": "fa fa-folder",' +
-				'"text": "Grandchild 1"' +
+				'"icon": "fa fa-file",' +
+				'"text": "Sub child 1"' +
 				'},' +
 				'{' +
-				'"icon": "fa fa-folder",' +
-				'"text": "Grandchild 2"' +
+				'"icon": "fa fa-file",' +
+				'"text": "Sub child 2"' +
 				'}' +
 				']' +
 				'},' +
 				'{' +
+				'"icon": "fa fa-file",' +
 				'"text": "Child 2"' +
 				'}' +
 				']' +
 				'},' +
 				'{' +
-				'"icon": "fa fa-folder",' +
+				'"icon": "fa fa-file",' +
 				'"text": "Parent 2"' +
 				'},' +
 				'{' +
-				'"icon": "fa fa-folder",' +
+				'"icon": "fa fa-file",' +
 				'"text": "Parent 3"' +
 				'},' +
 				'{' +
+				'"icon": "fa fa-file",' +
 				'"text": "Parent 4"' +
 				'},' +
 				'{' +
-				'"icon": "fa fa-folder",' +
+				'"icon": "fa fa-file",' +
 				'"text": "Parent 5"' +
 				'}' +
 				']';
 
 			$('#tree').bstreeview({ data: json });
-			//$('#tree1').bstreeview({ data: json });
 
 		});
 	</script>
