--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
 		integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-	<link href="bstreeview.css" rel="stylesheet">
+	<link href="css/bstreeview.css" rel="stylesheet">
 </head>
 
 <body>
@@ -26,51 +26,51 @@
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
 		crossorigin="anonymous"></script>
 
-	<script src="bstreeview.js">
+	<script src="js/bstreeview.js">
 	</script>
 	<script>
 		$(function () {
 
 			var json = '[' +
 				'{' +
-				'"text": "Parent 1",' +
-				'"icon": "fa fa-folder",' +
+				'"text": "Inbox",' +
+				'"icon": "fa fa-inbox",' +
 				'"nodes": [' +
 				'{' +
-				'"text": "Child 1",' +
-				'"icon": "fa fa-folder",' +
+				'"text": "Office",' +
+				'"icon": "fa fa-inbox",' +
 				'"nodes": [' +
 				'{' +
-				'"icon": "fa fa-file",' +
-				'"text": "Sub child 1"' +
+				'"icon": "fa fa-inbox",' +
+				'"text": "Customers"' +
 				'},' +
 				'{' +
-				'"icon": "fa fa-file",' +
-				'"text": "Sub child 2"' +
+				'"icon": "fa fa-inbox",' +
+				'"text": "Co-Workers"' +
 				'}' +
 				']' +
 				'},' +
 				'{' +
-				'"icon": "fa fa-file",' +
-				'"text": "Child 2"' +
+				'"icon": "fa fa-inbox",' +
+				'"text": "Others"' +
 				'}' +
 				']' +
 				'},' +
 				'{' +
-				'"icon": "fa fa-file",' +
-				'"text": "Parent 2"' +
+				'"icon": "fa fa-archive",' +
+				'"text": "Drafts"' +
 				'},' +
 				'{' +
-				'"icon": "fa fa-file",' +
-				'"text": "Parent 3"' +
+				'"icon": "fa fa-calendar",' +
+				'"text": "Calendar"' +
 				'},' +
 				'{' +
-				'"icon": "fa fa-file",' +
-				'"text": "Parent 4"' +
+				'"icon": "fa fa-address-book",' +
+				'"text": "Contacts"' +
 				'},' +
 				'{' +
-				'"icon": "fa fa-file",' +
-				'"text": "Parent 5"' +
+				'"icon": "fa fa-trash",' +
+				'"text": "Deleted Items"' +
 				'}' +
 				']';
 
