Added sample for buttons and actions

--- a/src/index.html
+++ b/src/index.html
@@ -38,17 +38,21 @@
 				{
 					text: "Inbox",
 					icon: "fa fa-inbox fa-fw",
+					action: "<button class='btn btn-primary btn-sm' onclick=\"alert(\'Hello\')\">Click Me!</button>",
 					nodes: [
 						{
 							text: "Office",
 							icon: "fa fa-inbox fa-fw",
+							action: "<button class='btn btn-primary btn-sm' onclick=\"alert(\'Hello Office\')\">Office</button>",
 							nodes: [
 								{
 									icon: "fa fa-inbox fa-fw",
+									action: "<button class='btn btn-primary btn-sm' onclick=\"alert(\'1\')\">1</button>",
 									text: "Customers"
 								},
 								{
 									icon: "fa fa-inbox fa-fw",
+									action: "<button class='btn btn-primary btn-sm' onclick=\"alert(\'2\')\">2</button>",
 									text: "Co-Workers"
 								}
 							]
